--- a/src/styles/variables.styl
+++ b/src/styles/variables.styl
@@ -1,6 +1,7 @@
-$theme-color = #428571
-$primary-color = #333
-$normal-color = #666
-$secondary-color = #999
-$aux-color = #ccc
+$bg-color = #fff
+$fg-color = #666
+$active-bg-color = #eee
+$active-fg-color = #333
+$text-color = $fg-color
+$aux-color = alpha($fg-color, .5)
 $line-height = 2
